input departemen modul

--- a/web03/web/WEB-INF/web.xml
+++ b/web03/web/WEB-INF/web.xml
@@ -4,9 +4,17 @@
         <servlet-name>ViewDepartemenServlet</servlet-name>
         <servlet-class>servlet.ViewDepartemenServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>InsertDepartemenServlet</servlet-name>
+        <servlet-class>servlet.InsertDepartemenServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ViewDepartemenServlet</servlet-name>
         <url-pattern>/viewdepartemen</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>InsertDepartemenServlet</servlet-name>
+        <url-pattern>/insertdepartemen</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
