--- a/webspring01/web/WEB-INF/web.xml
+++ b/webspring01/web/WEB-INF/web.xml
@@ -26,4 +26,17 @@
             30
         </session-timeout>
     </session-config>
+    
+     <resource-ref>  
+        <res-ref-name>
+            jdbc/latihan
+        </res-ref-name>
+        <res-type>
+            javax.sql.DataSource
+        </res-type>
+        <res-auth>
+            Container
+        </res-auth>
+    </resource-ref>
+    
 </web-app>
